a swathe of improvements to the codebase, also fixes errors around adding multiple solutions to one user